[package]
name = "configfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
json = ["serde_json", "serde"]

[dependencies]
fuse3 = { version = "0.5.1", features = ["tokio-runtime", "unprivileged"] }
tokio = { version = "1", features = ["macros", "rt", "time", "sync"] }
libc = "0.2"
futures-util = "0.3"
rand = "0.8.5"
bytes = "1"
futures = "0.3.25"
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", optional = true }

[dev-dependencies]
tempfile = "3.3.0"
